# CREW_1

./: README.md  pyproject.toml
src/TP_gian_v01/: crew.py  main.py
src/TP_gian_v01/config/: agents.yaml  tasks.yaml
src/TP_gian_v02/: crew.py  data.json  main.py
src/TP_gian_v02/config/: agents.yaml  tasks.yaml
src/TP_gian_v02/db/: chroma.sqlite3
src/crewai_enterprise_content_marketing_ideas/: crew.py  main.py
src/crewai_enterprise_content_marketing_ideas/config/: agents.yaml  tasks.yaml
src/crewai_enterprise_content_marketing_ideas/tools/: custom_tool.py
